test/org/midica/testfiles/failing/zero-with-tr.midica
INCLUDE inc/instruments.midica

0 - - tr=5
